# Sistema-de-Gestao-de-loja-em-C

./: .gitignore  CMakeLists.txt  Gestao_Funcionarios.cpp  Gestão de Produtos  Historico.cpp  README.md  Sistema de login.cpp  Sistema.c  Sistema_de_venda.cpp  Untitled1.cpp  build.ps1  controle de caixa  dados.txt  metas e desempenhos  pack-standalone.ps1  teste
Partes_separadas/: Gestao_Funcionarios.cpp  Historico.cpp  comissao de funcionarios
include/: AppIcon.hpp  LancamentoCaixa.hpp  LoginDialog.hpp  Loja.hpp  MainWindow.hpp  Produto.hpp  Storage.hpp  Theme.hpp  Usuario.hpp  Util.hpp  Venda.hpp
src/: LoginDialog.cpp  Loja.cpp  MainWindow.cpp  Produto.cpp  Storage.cpp  Util.cpp  main.cpp
